--- a/html/head.html
+++ b/html/head.html
@@ -6,6 +6,10 @@
 	<link rel="shortcut icon" href="files/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=*Please input your font*&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=
+
+	Raleway:wght@400;700;900
+	
+	&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
