--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('html/head.html',{ "title":"Enter Title" })
+@@include('html/head.html',{ "title":"Brella" })
 
 <body>
 	<div class="wrapper">
 		@@include('html/header.html',{})
 		<main class="page page__index">
-
 		</main>
 		@@include('html/footer.html',{})
 	</div>
