--- a/index.html
+++ b/index.html
@@ -4,35 +4,63 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Enter Title</title>
+	<title>Brella</title>
 	<link rel="shortcut icon" href="files/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=*Please input your font*&display=swap&_v=20220701183145" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220701183145">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap&_v=20220725183746" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220725183746">
 </head>
 
 <body>
 	<div class="wrapper">
 		<header class="header">
-	<div class="header__container">
-		<div class="header__menu menu">
+	<div class="header__container-big">
+		<div class="header__wrapper">
+			<div class="header__logo logo">
+				<a href="##" class="logo-link">
+					<img src="img/icons/icons.svg#logo" class="svg-logo-dims" alt="Brella">
+				</a>
+			</div>
+			<div class="header__content">
+				<div class="header__menu menu">
+					<nav id="nav" class="menu__body">
+						<!-- <div id="pointer" class="menu__pointer"></div> -->
+						<ul class="menu__list">
+							<li><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
+							<li><a href="##" id="menu-link" class="menu__link">Employers</a></li>
+							<li><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
+							<li><a href="##" id="menu-link" class="menu__link">Members</a></li>
+							<li><a href="##" id="menu-link" class="menu__link">About</a></li>
+							<li><a href="##" id="menu-link" class="menu__link">Blog</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="header__btns">
+					<button class="btn btn__green header-btn__demo">
+						Request a demo
+					</button>
+					<button type="button" class="btn header-btn__login login">
+						Login
+						<ul class="login-list">
+							<li><a href="##" class="login-list__link">Google</a></li>
+							<li><a href="##" class="login-list__link">Facebook</a></li>
+							<li><a href="##" class="login-list__link">Twitter</a></li>
+						</ul>
+					</button type="button">
+				</div>
+			</div>
+			<div class="header__action">
+				<button type="button" class="header__theme"><img
+						src="https://img.icons8.com/sf-ultralight-filled/25/000000/moon-symbol.png" alt=""></button>
+			</div>
 			<div class="menu__icon">
 				<span></span>
 			</div>
-			<nav class="menu__body">
-				<ul class="menu__list">
-					<li><a href="##" class="menu__link"></a></li>
-					<li><a href="##" class="menu__link"></a></li>
-					<li><a href="##" class="menu__link"></a></li>
-					<li><a href="##" class="menu__link"></a></li>
-				</ul>
-			</nav>
 		</div>
 	</div>
 </header>
 		<main class="page page__index">
-
 		</main>
 		<footer class="footer">
     <div class="footer__container">
@@ -40,7 +68,7 @@
     </div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220701183145"></script>
+	<script src="js/app.min.js?_v=20220725183746"></script>
 </body>
 
 </html>
