add iconsfont + full header

--- a/html/header.html
+++ b/html/header.html
@@ -1,42 +1,43 @@
 <header class="header">
 	<div class="header__container-big">
 		<div class="header__wrapper">
-			<div class="header__logo logo">
-				<a href="##" class="logo-link">
-					<img src="@img/icons/icons.svg#logo" class="svg-logo-dims" alt="Brella">
+			<div class="header__logo">
+				<a href="##" class="logo-link icon-logo">
 				</a>
 			</div>
-			<div class="header__content">
-				<div class="header__menu menu">
-					<nav id="nav" class="menu__body">
-						<!-- <div id="pointer" class="menu__pointer"></div> -->
-						<ul class="menu__list">
-							<li><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
-							<li><a href="##" id="menu-link" class="menu__link">Employers</a></li>
-							<li><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
-							<li><a href="##" id="menu-link" class="menu__link">Members</a></li>
-							<li><a href="##" id="menu-link" class="menu__link">About</a></li>
-							<li><a href="##" id="menu-link" class="menu__link">Blog</a></li>
-						</ul>
-					</nav>
-				</div>
-				<div class="header__btns">
-					<button class="btn btn__green header-btn__demo">
-						Request a demo
-					</button>
-					<button type="button" class="btn header-btn__login login">
-						Login
-						<ul class="login-list">
-							<li><a href="##" class="login-list__link">Google</a></li>
-							<li><a href="##" class="login-list__link">Facebook</a></li>
-							<li><a href="##" class="login-list__link">Twitter</a></li>
-						</ul>
-					</button type="button">
+			<div class="header__content header-content">
+				<div class="header-content__wrapper">
+					<div class="header__menu menu">
+						<nav id="nav" class="menu__body">
+							<!-- <div id="pointer" class="menu__pointer"></div> -->
+							<ul class="menu__list">
+								<li><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
+								<li><a href="##" id="menu-link" class="menu__link">Employers</a></li>
+								<li><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
+								<li><a href="##" id="menu-link" class="menu__link">Members</a></li>
+								<li><a href="##" id="menu-link" class="menu__link">About</a></li>
+								<li><a href="##" id="menu-link" class="menu__link">Blog</a></li>
+							</ul>
+						</nav>
+					</div>
+					<div class="header__btns">
+						<button class="btn btn__green header-btn__demo">
+							Request a demo
+						</button>
+						<button type="button" class="btn header-btn__login login">
+							<a href="login.html">Login</a>
+							<ul class="login-list">
+								<li><a href="##" class="login-list__link icon-google">Google</a></li>
+								<li><a href="##" class="login-list__link icon-facebook">Facebook</a></li>
+								<li><a href="##" class="login-list__link icon-twitter">Twitter</a></li>
+							</ul>
+						</button type="button">
+					</div>
 				</div>
 			</div>
-			<div class="header__action">
-				<button type="button" class="header__theme"><img
-						src="https://img.icons8.com/sf-ultralight-filled/25/000000/moon-symbol.png" alt=""></button>
+			<div class="page__action">
+				<button type="button" class="page__theme icon-moon icon-sun"></button>
+				<button type="button" class="page__reset"></button>
 			</div>
 			<div class="menu__icon">
 				<span></span>
