--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Brella</title>
+	<title>Login page</title>
 	<link rel="shortcut icon" href="files/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -61,7 +61,8 @@
 		</div>
 	</div>
 </header>
-		<main class="page page__index">
+		<main class="page page__second">
+			Login Page
 		</main>
 		<footer class="footer">
     <div class="footer__container">
@@ -69,7 +70,6 @@
     </div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220726151614"></script>
 </body>
 
 </html>
