--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
 	<div class="wrapper">
 		@@include('html/header.html',{})
 		<main class="page page__index">
+			<section class="hero">
+				<div class="hero__container">
+					<div class="hero__content">
+						<div class="hero__offer offer">
+							<h2 class="offer__title title">
+								Give your team peace of mind with supplemental health insurance from Brella.
+							</h2>
+							<p class="offer__text">
+								I'm wondering...
+							</p>
+							<form action="##" class="offer__form">
+								<input type="text" placeholder="how Brella's plan works" name="offer" class="offer__input">
+								<button type="submit" class="btn btn__green offer__submit">Find out</button>
+							</form>
+						</div>
+						<div class="hero__features features">
+
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		@@include('html/footer.html',{})
 	</div>
