--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="shortcut icon" href="files/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap&_v=20220726151614" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220726151614">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap&_v=20220728000120" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220728000120">
 </head>
 
 <body>
@@ -62,6 +62,27 @@
 	</div>
 </header>
 		<main class="page page__index">
+			<section class="hero">
+				<div class="hero__container">
+					<div class="hero__content">
+						<div class="hero__offer offer">
+							<h2 class="offer__title title">
+								Give your team peace of mind with supplemental health insurance from Brella.
+							</h2>
+							<p class="offer__text">
+								I'm wondering...
+							</p>
+							<form action="##" class="offer__form">
+								<input type="text" placeholder="how Brella's plan works" name="offer" class="offer__input">
+								<button type="submit" class="btn btn__green offer__submit">Find out</button>
+							</form>
+						</div>
+						<div class="hero__features features">
+
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
     <div class="footer__container">
@@ -69,7 +90,7 @@
     </div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220726151614"></script>
+	<script src="js/app.min.js?_v=20220728000120"></script>
 </body>
 
 </html>
