--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link rel="shortcut icon" href="files/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap&_v=20220728000120" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220728000120">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap&_v=20220728162425" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220728162425">
 </head>
 
 <body>
@@ -63,8 +63,8 @@
 </header>
 		<main class="page page__index">
 			<section class="hero">
-				<div class="hero__container">
-					<div class="hero__content">
+				<div class="hero__content">
+					<div class="hero__container">
 						<div class="hero__offer offer">
 							<h2 class="offer__title title">
 								Give your team peace of mind with supplemental health insurance from Brella.
@@ -78,7 +78,67 @@
 							</form>
 						</div>
 						<div class="hero__features features">
-
+							<div class="features__block block-features">
+								<div class="block-features__img">
+									<img src="img/icons/icons.svg#coverage" alt="">
+								</div>
+								<div class="block-features__content">
+									<h4 class="block-features__title">
+										More coverage
+									</h4>
+									<p class="block-features__desc">
+										Brella covers 13,000+ injuries and illnesses from concussions to cancer.
+									</p>
+								</div>
+							</div>
+							<div class="features__block block-features">
+								<div class="block-features__img">
+									<img src="img/icons/icons.svg#hassle" alt="">
+								</div>
+								<div class="block-features__content">
+									<h4 class="block-features__title">
+										Less hassle
+									</h4>
+									<p class="block-features__desc">
+										One easy-to-manage plan with paperless install and online admin tools.
+									</p>
+								</div>
+							</div>
+							<div class="features__block block-features">
+								<div class="block-features__img">
+									<img src="img/icons/icons.svg#benefits" alt="">
+								</div>
+								<div class="block-features__content">
+									<h4 class="block-features__title">
+										Faster benefits
+									</h4>
+									<p class="block-features__desc">
+										Brella pays claims in hours–not weeks so your people can rest easy.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="why">
+				<div class="why__container">
+					<div class="why__body">
+						<div class="why__content">
+							<h3 class="why__subtitle">
+								Why Brella?
+							</h3>
+							<h2 class="why__title title">
+								Today, any health insurance deductible can feel like a high deductible.
+							</h2>
+							<p class="why__text">
+								Brella's supplemental health plan enhances your health benefit strategy to ensure that health
+								hardships don't become financial burdens.
+							</p>
+							<a href="##" class="why__more">See our plan</a>
+						</div>
+						<div class="why__statistic statistic">
+							<picture><source srcset="../img/static.webp" type="image/webp"><img src="../img/static.png" alt=""></picture>
 						</div>
 					</div>
 				</div>
@@ -90,7 +150,7 @@
     </div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220728000120"></script>
+	<script src="js/app.min.js?_v=20220728162425"></script>
 </body>
 
 </html>
