--- a/index.html
+++ b/index.html
@@ -81,8 +81,46 @@
 							</p>
 							<a href="##" class="why__more">See our plan</a>
 						</div>
-						<div class="why__statistic statistic">
-							<img src="../img/static.png" alt="">
+						<div class="why__stats stats">
+							<div class="stats__body">
+								<div class="stats__content">
+									<p class="stats__number">
+										60%
+									</p>
+									<div class="stats-pointer"></div>
+									<p class="stats__text">
+										of Americans <span>would have to borrow</span> <br> to cover an unexpected $1000 expense
+									</p>
+								</div>
+								<div class="stats__columns column">
+									<div class="column__item column__deductible deductible"">
+										<p class=" column__absolute column__price">
+										$1,644
+										</p>
+										<div class="column__value deductible__value">
+											<div></div>
+										</div>
+										<p class="column__absolute column__desc">
+											Deductible
+										</p>
+									</div>
+									<div class="stats-pointer__column"></div>
+									<div class="column__item column__annual-max annual-max">
+										<p class="column__absolute column__price">
+											$4,039
+										</p>
+										<div class="column__value annual-max__value">
+											<div></div>
+										</div>
+										<p class="column__absolute column__desc">
+											Annual Max
+										</p>
+									</div>
+								</div>
+							</div>
+							<p class="stats__desc">
+								2020 individual averages (Source: KFF)
+							</p>
 						</div>
 					</div>
 				</div>
