--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 	<link rel="shortcut icon" href="files/favicon.ico">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&display=swap&_v=20220728162425" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220728162425">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700;900&
+
+	family=Roboto:wght@400;700&
+
+	display=swap&_v=20220806123436" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220806123436">
 </head>
 
 <body>
@@ -137,8 +141,46 @@
 							</p>
 							<a href="##" class="why__more">See our plan</a>
 						</div>
-						<div class="why__statistic statistic">
-							<picture><source srcset="../img/static.webp" type="image/webp"><img src="../img/static.png" alt=""></picture>
+						<div class="why__stats stats">
+							<div class="stats__body">
+								<div class="stats__content">
+									<p class="stats__number">
+										60%
+									</p>
+									<div class="stats-pointer"></div>
+									<p class="stats__text">
+										of Americans <span>would have to borrow</span> <br> to cover an unexpected $1000 expense
+									</p>
+								</div>
+								<div class="stats__columns column">
+									<div class="column__item column__deductible deductible"">
+										<p class=" column__absolute column__price">
+										$1,644
+										</p>
+										<div class="column__value deductible__value">
+											<div></div>
+										</div>
+										<p class="column__absolute column__desc">
+											Deductible
+										</p>
+									</div>
+									<div class="stats-pointer__column"></div>
+									<div class="column__item column__annual-max annual-max">
+										<p class="column__absolute column__price">
+											$4,039
+										</p>
+										<div class="column__value annual-max__value">
+											<div></div>
+										</div>
+										<p class="column__absolute column__desc">
+											Annual Max
+										</p>
+									</div>
+								</div>
+							</div>
+							<p class="stats__desc">
+								2020 individual averages (Source: KFF)
+							</p>
 						</div>
 					</div>
 				</div>
@@ -150,7 +192,7 @@
     </div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220728162425"></script>
+	<script src="js/app.min.js?_v=20220806123436"></script>
 </body>
 
 </html>
