--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	family=Roboto:wght@400;700&
 
-	display=swap&_v=20220806123436" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.min.css?_v=20220806123436">
+	display=swap&_v=20220810231722" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220810231722">
 </head>
 
 <body>
@@ -73,7 +73,7 @@
 							<h2 class="offer__title title">
 								Give your team peace of mind with supplemental health insurance from Brella.
 							</h2>
-							<p class="offer__text">
+							<p class="text offer__text">
 								I'm wondering...
 							</p>
 							<form action="##" class="offer__form">
@@ -129,13 +129,13 @@
 				<div class="why__container">
 					<div class="why__body">
 						<div class="why__content">
-							<h3 class="why__subtitle">
+							<h3 class="why__subtitle subtitle">
 								Why Brella?
 							</h3>
 							<h2 class="why__title title">
 								Today, any health insurance deductible can feel like a high deductible.
 							</h2>
-							<p class="why__text">
+							<p class="text why__text">
 								Brella's supplemental health plan enhances your health benefit strategy to ensure that health
 								hardships don't become financial burdens.
 							</p>
@@ -144,55 +144,151 @@
 						<div class="why__stats stats">
 							<div class="stats__body">
 								<div class="stats__content">
-									<p class="stats__number">
-										60%
-									</p>
-									<div class="stats-pointer"></div>
+									<div class="stats__number">
+										<span data-digits-counter="700">60</span> %
+									</div>
+									<div class="stats-pointer _anim-item"></div>
 									<p class="stats__text">
 										of Americans <span>would have to borrow</span> <br> to cover an unexpected $1000 expense
 									</p>
 								</div>
 								<div class="stats__columns column">
 									<div class="column__item column__deductible deductible"">
-										<p class=" column__absolute column__price">
-										$1,644
-										</p>
-										<div class="column__value deductible__value">
-											<div></div>
-										</div>
-										<p class="column__absolute column__desc">
-											Deductible
-										</p>
+										<div class=" column__absolute column__price">
+										$ <span data-digits-counter="700">1644</span>
 									</div>
-									<div class="stats-pointer__column"></div>
-									<div class="column__item column__annual-max annual-max">
-										<p class="column__absolute column__price">
-											$4,039
-										</p>
-										<div class="column__value annual-max__value">
-											<div></div>
+									<div class="column__value deductible__value _anim-item _anim-no-hide">
+										<div>
 										</div>
-										<p class="column__absolute column__desc">
-											Annual Max
-										</p>
 									</div>
+									<p class="column__absolute column__desc">
+										Deductible
+									</p>
+								</div>
+								<div class="stats-pointer__column _anim-item"></div>
+								<div class="column__item column__annual-max annual-max">
+									<div class="column__absolute column__price">
+										$ <span data-digits-counter="700">4039</span>
+									</div>
+									<div class="column__value annual-max__value _anim-item _anim-no-hide">
+										<div>
+
+										</div>
+									</div>
+									<p class="column__absolute column__desc">
+										Annual Max
+									</p>
 								</div>
 							</div>
-							<p class="stats__desc">
-								2020 individual averages (Source: KFF)
-							</p>
+						</div>
+						<p class="stats__desc">
+							2020 individual averages (Source: KFF)
+						</p>
+					</div>
+				</div>
+	</div>
+	</section>
+	<section class="brings">
+		<div class="brings__wrapper">
+			<div class="brings__container">
+				<h3 class="subtitle brings__subtitle">
+					brella brings
+				</h3>
+				<div class="brings__body">
+					<div class="brings-block brings-block__1">
+						<div class="brings-bg brings-bg__1">
+						</div>
+						<div class="brings-content brings-content__1">
+							<div class="brings-text brings-text__1">
+								<p>
+									<a href="##"><span class="icon-arrow-right">Customizable benefits</span></a>
+								</p>
+								<p>
+									Paperless install & admin
+								</p>
+								<p>
+									Effortless enrollment
+								</p>
+								<p>
+									Easy claims experience
+								</p>
+								<p>
+									Fast benefit payouts
+								</p>
+								<p>
+									Concierge support
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="brings-block brings-block__2">
+						<div class="brings-bg brings-bg__2">
+						</div>
+						<div class="brings-content brings-content__2">
+							<div class="brings-text brings-text__2">
+								<p>Every Brella plan comes with a benefit for Moderate, Severe, and Catastrophic conditions.
+									Employees
+									can select the payout amounts that fit their needs and their budget.</p>
+								<p>Employers can fund part or all of the premiums—or offer Brella as a voluntary benefit. The
+									choice
+									is up to you.</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</section>
-		</main>
-		<footer class="footer">
+			</div>
+		</div>
+	</section>
+	<section class="plan">
+		<div class="plan__container">
+			<div class="plan__body">
+				<div class="plan__content">
+					<div class="plan__info">
+						<h3 class="subtitle plan__subtitle">
+							one plan, more coverage
+							</p>
+							<h2 class="title plan__title">
+								No one can predict which health issues might come their way.
+							</h2>
+							<p class="text plan__text">
+								Our broad supplemental coverage gets rid of the guesswork and puts cash in your team’s pockets
+								for
+								most conditions that require urgent medical attention.
+							</p>
+					</div>
+					<div class="plan__img">
+						<picture><source srcset="img/plan.webp" type="image/webp"><img src="img/plan.png" alt="family"></picture>
+					</div>
+				</div>
+				<div class="plan__numbers">
+					<div class="plan__block">
+						<div class="plan__number"><span data-digits-counter>5</span>K</div>
+						<p class="plan__desc">covered injuries and illnesses from fractures and appendicitis to cancer</p>
+					</div>
+					<div class="plan__block">
+						<div class="plan__number"><span data-digits-counter>1</span>X</div>
+						<p class="plan__desc">more covered conditions than Accident and Critical Illness plans—combined</p>
+					</div>
+					<div class="plan__block">
+						<div class="plan__number"><span data-digits-counter>40</span>%</div>
+						<p class="plan__desc">plans are 100% guaranteed issue. No medical underwriting required</p>
+					</div>
+					<div class="plan__block">
+						<div class="plan__number"><span data-digits-counter>0</span></div>
+						<p class="plan__desc">Zero limitations or exclusions for pre-existing conditions</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	</main>
+	<footer class="footer">
     <div class="footer__container">
 
     </div>
 </footer>
 	</div>
-	<script src="js/app.min.js?_v=20220806123436"></script>
+	<script src="js/app.min.js?_v=20220810231722"></script>
 </body>
 
 </html>
