--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<section class="why">
 				<div class="why__container">
 					<div class="why__body">
-						<div class="why__content">
+						<div class="type-block why__content">
 							<h3 class="why__subtitle subtitle">
 								Why Brella?
 							</h3>
@@ -79,7 +79,9 @@
 								Brella's supplemental health plan enhances your health benefit strategy to ensure that health
 								hardships don't become financial burdens.
 							</p>
-							<a href="##" class="why__more">See our plan</a>
+							<p>
+								<a href="##" class="content__more why__more">See our plan</a>
+							</p>
 						</div>
 						<div class="why__stats stats">
 							<div class="stats__body">
@@ -183,7 +185,7 @@
 		<div class="plan__container">
 			<div class="plan__body">
 				<div class="plan__content">
-					<div class="plan__info">
+					<div class="type-block plan__info">
 						<h3 class="subtitle plan__subtitle">
 							one plan, more coverage
 							</p>
@@ -196,8 +198,8 @@
 								most conditions that require urgent medical attention.
 							</p>
 					</div>
-					<div class="plan__img">
-						<img src="img/plan.png" alt="family">
+					<div class="plan__img no-webp">
+						<img src="img/plan.png" class="no-webp" alt="family">
 					</div>
 				</div>
 				<div class="plan__numbers">
@@ -217,6 +219,53 @@
 						<div class="plan__number"><span data-digits-counter>0</span></div>
 						<p class="plan__desc">Zero limitations or exclusions for pre-existing conditions</p>
 					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="exp">
+		<div class="exp__container">
+			<div class="exp__body">
+				<div class="exp__img">
+					<img src="img/gif/phone.gif" alt="">
+				</div>
+				<div class="type-block exp__content">
+					<h3 class="subtitle exp__subtitle">
+						a better claims experience
+					</h3>
+					<h2 class="title exp__title">
+						Give your people a plan that pays in hours—not weeks.
+					</h2>
+					<p class="text exp__text">
+						Your team can’t wait for peace of mind. Brella pays on diagnosis, so members can file a claim sooner
+						and
+						get paid faster via our Member Portal or mobile app.
+					</p>
+					<p>
+						<a href="##" class="content__more exp__more">Play Video</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="employers">
+		<div class="employers__container">
+			<div class="employers__body">
+				<div class="type-block employers__content">
+					<h3 class="subtitle employers__subtitle">
+						for employers
+					</h3>
+					<h2 class="title employers__title">
+						Easy enrollment meets simple administration.
+					</h2>
+					<p class="text employers__text">
+						Brella brings 100% paperless implementation, enrollment, and admin. Plug into our platforms or we’ll
+						plug
+						into yours.
+					</p>
+					<p>
+						<a href="##" class="content__more employers__more">Learn more</a>
+					</p>
 				</div>
 			</div>
 		</div>
