--- a/html/header.html
+++ b/html/header.html
@@ -11,12 +11,12 @@
 						<nav id="nav" class="menu__body">
 							<!-- <div id="pointer" class="menu__pointer"></div> -->
 							<ul class="menu__list">
-								<li><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Employers</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Members</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">About</a></li>
-								<li><a href="##" id="menu-link" class="menu__link">Blog</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Our Plan</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Employers</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Brokers</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Members</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">About</a></li>
+								<li class="underline"><a href="##" id="menu-link" class="menu__link">Blog</a></li>
 							</ul>
 						</nav>
 					</div>
