--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,87 @@
 <footer class="footer">
-    <div class="footer__container">
-
-    </div>
+	<div class="footer__container">
+		<div class="footer__main main-footer">
+			<div class="main-footer__content">
+				<div class="main-footer__menu footer-menu">
+					<a href="#top" class="footer-menu__logo icon-logo">
+					</a>
+					<ul class="footer-menu__block">
+						<li class="footer-menu__title underline">
+							<a href="##">Join Brella</a>
+						</li>
+						<li class="underline"><a href="##">Our Plan</li>
+						<li class="underline"><a href="##">Employers</a></li>
+						<li class="underline"><a href="##">Brokers</a></li>
+						<li class="underline"><a href="##">Members</a></li>
+					</ul>
+					<ul class="footer-menu__block">
+						<li class="footer-menu__title underline">
+							<a href="##">Company</a>
+						</li>
+						<li class="underline"><a href="##">About</a></li>
+						<li class="underline"><a href="##">Blog</a></li>
+						<li class="underline"><a href="##">Careers</a></li>
+						<li class="underline"><a href="##">Contact</a></li>
+					</ul>
+				</div>
+				<div class="main-footer__contact contact">
+					<div class="contact__text">
+						<p class="contact__title">Get the latest</p>
+						<p>Sign up to receive benefits news and insights in your inbox once a month.</p>
+					</div>
+					<form class="contact__form" action="##">
+						<input type="email" name="email" id="email" placeholder="Email*">
+						<button type="submit" class="icon-arrow-right"></button>
+					</form>
+					<div class="contact__icons">
+						<a href="##" class="contact__link contact__linked-in icon-linked-in">
+						</a>
+						<a href="##" class="contact__link contact__twitter icon-twitter">
+						</a>
+						<a href="##" class="contact__link contact__youtube icon-youtube">
+						</a>
+					</div>
+				</div>
+			</div>
+			<hr>
+		</div>
+		<div class="footer__desc desc-footer">
+			<p>
+				Brella is a limited benefit policy; it is not a substitute for health insurance. The information provided on
+				this website is illustrative only. A complete description of benefits, limitations, and exclusions are
+				provided in your certificate of Insurance and applicable Riders. For a summary of limitations and
+				exclusions, see our FAQ. Payout values listed do not guarantee an amount to be paid for listed conditions.
+				Product not available in all states. All coverage is subject to the terms and conditions of the master group
+				policy.
+			</p>
+			<p>
+				Brella is underwritten by
+				<span class="addres__underwritten">
+					Greenhouse Life Insurance Company (NAIC 80055). Form No. PFSB11-TX
+				</span>
+			</p>
+			<p>
+				Reach us by mail at
+				<span class="addres__mail">
+					2093 Philadelphia Pike #2496, Claymont, DE 19703
+				</span>
+				and by phone at
+				<span class="phone">
+					(844) 987-1070
+				</span>
+				.
+			</p>
+		</div>
+		<div class="footer__rights rights-footer">
+			<p>© 2021 Brella Insurance Inc. All Rights Reserved.</p>
+			<div class="rights-footer__links">
+				<div class="rights-footer__link rights-footer__link-privacy">
+					<a href="##" class="underline">Privacy</a>
+				</div>
+				<div class="rights-footer__link rights-footer__link-terms">
+					<a href="##" class="underline">Terms of Service</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
