--- a/html/head.html
+++ b/html/head.html
@@ -13,5 +13,6 @@
 	family=Roboto:wght@400;700&
 
 	display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
